# chess-engine

./: CMakeLists.txt  CMakePresets.json
src/: config.h.in
src/util/: atomic_queue.h  logger.h
